fix overflow

--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,7 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    overflow: hidden;
 }
 :root {
     --yellow: hsl(51, 100%, 49%);
